Changes in Vendor and Carrier screens =4th Jan 20222

--- a/src/main/resources/samyak_PropertiesData/ObjectStorage.properties
+++ b/src/main/resources/samyak_PropertiesData/ObjectStorage.properties
@@ -23,6 +23,7 @@ Days_className=weekday
 #====Xpath
 
 --------------common--------------------
+CreateTitle_xpath=//h2[@class="pb-0"]
 Lemail_xpath=//*[@formcontrolname="email"]
 NoData_xpath=//*[@class="dx-datagrid-nodata"]
 DataGrid_xpath=//div[@aria-label="Data grid"]
@@ -115,108 +116,6 @@ Tranmode_xpath=//*[@formcontrolname="transMode"]/div[1]/div/div[1]/input
 ShwInac_xpath=//*[@formcontrolname="showInactive"]
 Company_xpath=//*[@formcontrolname="companyId"]//input[@role="combobox"]
 
-------------------Geography------------------------------------
-GeoCnt_xpath=//*[@id="dx-1cadd5bc-f50c-68e9-c1a5-d1c3e9bc54d2"]/dxi-item/ul/li[1]/dx-button
-GeoAdCntSrch_xpath=//*[@id="main-container"]/app-side-nav/div/app-countries/div/div[2]/div/div/div/div[1]/div/dx-text-box/div/div[1]/input
-Geography_xpath=//*[@id="dx-1b9be103-796e-3f4c-a492-12dbf7c6971b"]/div[1]
-SelectAll_xpath=//*[@class="dx-list-select-all"]
-
-
-
--------------------Airport------------------------------------
-AirName_xpath=//*[@formcontrolname="airportName"]/div/div[1]/input
-APSearch_xpath=//*[@placeholder="Search"]/div/div[1]/input
-APVaidTo_xpath=//*[@formcontrolname="ValidTo"]/div/div/div[1]/input
-APPostCode_xpath=//*[@formcontrolname="PostalCode"]/div/div[1]/input
-APCity_xpath=//*[@formcontrolname="City"]/div[1]/div/div[1]/input
-APCityDrop_xpath=//*[@formcontrolname="City"]/div[1]/div/div[2]/div[@aria-label="Select"]
-APFilAirName_xpath=//*[@formcontrolname="airportName"]/div/div[1]/input
-APFilClear_xpath=//*[@aria-label="Clear"]
-APFilCancel_xpath=//*[@aria-label="Cancel"]
-GridRecord_xpath=//*[@class="dx-pages"]/div[@class="dx-info"]
-APAlAp_xpath=//*[@class="link_txt mt-10"]
-APALHeader_xpath=//*[@class="dx-item-content dx-toolbar-item-content"]/div
-APALAPID_xpath=//form/dx-autocomplete[@formcontrolname="airportId"]/div[1]/div/div[1]/input
-APALASub_xpath=//dx-validation-group/div[2]/dx-button[@aria-label="Submit"]
-APALACncl_xpath=//dx-validation-group/div[2]/dx-button[@aria-label="Cancel"]
-APALACls_xpath=//*[@aria-label="close"]
-
-------------------------AirportGroup----------------------
-ApGSearch_xpath=//*[@valuechangeevent="keyup"]/div/div[1]/input
-APGShInAct_xpath=//dx-check-box
-APGCreate_xpath=//*[@routerlink="airportgroup"]	
-APGGrpName_xpath=//*[@formcontrolname="groupName"]/div/div[1]/input
-APGDesc_xpath=//*[@formcontrolname="description"]/div/div[1]/textarea
-APGApList_xpath=//*[@formcontrolname="AirportIds"]/div[1]/div/div[1]/input
-APGListSearch_xpath=//*[@class="dx-field-value"]/dx-button[@icon="search"]
-APGApID_xpath=//*[@formcontrolname="airportId"]/div/div[1]/input
-APGApName_xpath=//*[@formcontrolname="airportName"]/div/div[1]/input
-APGAPLSearch_xpath=//*[@aria-label="Search"]
-ApGLApSelect_xpath=//td[@aria-label="Select row"]/div
-APGLSubmit_xpath=//*[@class="row popup-btn-wrapper"]/div/dx-button[@aria-label="Submit"]
-APFLCancl_xpath=//*[@class="row popup-btn-wrapper"]/div/dx-button[@aria-label="Cancel"]
-APGAListVal_xpath=//*[@class="dx-tag-content"]/span
-APGExp_xpath=//*[@class="dx-datagrid-group-closed"]
-APGValidTo_xpath=//*[@formcontrolname="validTo"]/div/div/div[1]/input
-APGRemoveAp_xpath=//*[@class="dx-tag-remove-button"]
--------------------------vendor----------------------
-vendordiv_xpath=//*[@id="single-spa-application:mnx-ui-userrole"]/app-root/div/app-main-layout/div/app-sidebar/aside/div[2]/div/nav/ul/li
-MainVendor_xpath=//*[@id="aside"]/div/ul/li[3]/button/span
-vendor_xpath=//*[@id="single-spa-application:mnx-ui-userrole"]/app-root/div/app-main-layout/div/app-sidebar/aside/div[2]/div/nav/ul/li/dx-button[1]/div
-VendCreate_xpath=//*[@aria-label="Create"]
-VendBack_xpath=//*[@aria-label="Back"]
-
-
-
-----------VendorType&Sub-TypeEditorDiv----------------
-VendTST_xpath=//*[@aria-label="Vendor Type & Sub-Type"]
-VendTSTExpand_xpath=//*[@aria-label="Expand"]
-VendTSTColla_xpath=//*[@aria-label="Collapse"]
-
-------------VendorAddress--------------------------
-VendAddress_xpath=//*[@aria-label="Address"]
------------------------VendorPerformance------------
-VendPerf_xpath=//*[@aria-label="Vendor Performance"]
-VPerfSearch_xpath=//*[@placeholder="Search"]//input
-
-------VendorPerformance-------
-VVPerformance_xpath=//*[@aria-label="Vendor Performance"]
-
-----------VendorDocument---------
-VendDocument_xpath=//*[@aria-label="Document"]
-
------------VendorServiceAreaType-----------------
-VendSAreaType_xpath=//*[@aria-label="Service Area Type"]
-VSATAPIDItem_xpath=//div[@class="action_btn dx-template-wrapper"]
-
-
-
---------VendorTransporationsService-----------------
-VTraService_xpath=//*[@aria-label="Transportation Service"]
-
-------------VendorTransporationServiceLevel---------------
-VTSLevel_xpath=//*[@aria-label="Transportation Service Level"]
-
-------------VendorVehicleType-----------
-VendVehicleType_xpath=//*[@aria-label="Vehicle Type"]
-
----------------VendorFacilityAttributes-----------------------------------
-VFacAttributes_xpath=//*[@aria-label="Facility Attributes"]
-
-------------VendorFacilityHandling----------------
-VFHandling_xpath=//*[@aria-label="Facility Handling"]
-
------------VendorFacilityMaintenance-----------
-VFMaintenance_xpath=//*[@aria-label="Facility Maintenance"]
-
----------------------VendorAlert----------------------------------
-VAlert_xpath=//*[@aria-label="Alert"]
-
--------------------VendorCompliance-----------------
-VCompliance_xpath=//*[@aria-label="Compliance"]
-VCompDelete_xpath=//*[@src="/assets/img/delete.png"]
-VCompValidTo_xpath=//*[@class="dx-popup-content"]//input[@id="dteComplianceTypeValidTo"]
-
 -------------Vendor->Courier----------------------
 VCorDiv_xpath=//*[@id="single-spa-application:mnx-ui-userrole"]/app-root/div/app-main-layout/div/app-sidebar/aside/div[2]/div/nav/ul
 VCor_xpath=//*[@aria-label="Courier"]/div/span
@@ -259,9 +158,6 @@ VCorVenItm_xpath=//*[@class="custom-item"]/div[@class="product-name"]
 VCorCrBack_xpath=//*[@aria-label="Back"]
 VCourSName_xpath=//input[@id="txtcouriersName"]
 
------------Vendor-Courier-Driver----------------------------
-CourDriv_xpath=//*[@aria-label="Driver"]
-CDSearch_xpath=//input[@id="txtcourierdriverKeyup"]
 
 ----------------Vendor-Courier-OperationHours---------------
 CourOpH_xpath=//*[@aria-label="Operation Hours"]
@@ -293,83 +189,6 @@ CourNote_xpath=//*[@aria-label="Courier Note"]
 CNSearch_xpath=//*[@formcontrolname="searchText"]//input
 CNENote_xpath=//*[@formcontrolname="note"]//textarea
 CNEValidTo_xpath=//*[@formcontrolname="validTo"]//input[@id="vaildToDateBox"]
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
--------------------Vendor-Carrier------------------
-CarrAIrName_xpath=//*[@formcontrolname="name"]/div/div[1]/input
-CarrOAGId_xpath=//*[@formcontrolname="oagId"]/div/div[1]/input
-CarrFAAId_xpath=//*[@formcontrolname="faaId"]/div/div[1]/input
-CarrvalidTo_xpath=//*[@formcontrolname="validTo"]/div/div/div[1]/input
-CarrCountry_xpath=//*[@formcontrolname="countryId"]/div[1]/div/div[1]/input
-CarrCity_xpath=//*[@formcontrolname="city"]/div/div/div[1]/input
-CarrAddLin1_xpath=//*[@formcontrolname="addrLine1"]/div/div[1]/input
-CarrZip_xpath=//*[@formcontrolname="zipCode"]/div/div[1]/input
-CarrAWSP_xpath=//*[@formcontrolname="awbPrefix"]/div/div[1]/input
-CarrAirName_xpath=//*[@formcontrolname="airlineName"]/div/div[1]/input
-CarrOAGId_xpath=//*[@formcontrolname="oagId"]/div/div[1]/input
-CarrShwInAc_xpath=//*[@formcontrolname="showInactive"]
-CarrBack_xpath=//*[@aria-label=" Back"]
-CarrVendDrop_xpath=//*[@formcontrolname="vendorGUID"]
-
-
-------------Vendor-Carrier-Notes-------
-Notes_xpath=//*[@aria-label="Notes"]
-NotCreat_xpath=//*[@aria-label="Create"]
-NoCrePuHeading_xpath=//*[@class="dx-item-content dx-toolbar-item-content"]/div
-NoNotes_xpath=//*[@formcontrolname="note"]/div/div[1]/textarea
-NoValidTo_xpath=//*[@formcontrolname="validTo"]/div/div/div[1]/input
-NoSubmit_xpath=//*[@aria-label="Submit"]
-NoCancel_xpath=//*[@aria-label="Cancel"]
-NoClose_xpath=//*[@aria-label="close"]
-NoSearch_xpath=//*[@placeholder="Search"]/div/div[1]/input
-NoMsg_xpath=//*[@class="success dx-template-wrapper"]/p
-
-------------Vendor-Carrier-Notices---------
-Notices_xpath=//*[@aria-label="Notices"]
-NotiApID_xpath=//*[@formcontrolname="airportId"]/div/div/div[1]/input
-NotiNotes_xpath=//*[@formcontrolname="notes"]/div/div[1]/textarea
-
-----------Vendor-Carrier-Location-----------
-Location_xpath=//*[@aria-label="Location"]
-LocApID_xpath=//*[@formcontrolname="airportId"]/div/div/div[1]/input
-LocValidTo_xpath=//*[@formcontrolname="validTo"]/div/div/div[1]/input
-
------------Vendor-Carrier-Account----------------------
-Acc_xpath=//*[@aria-label="Accounts"]
-CreateTitle_xpath=//h2[@class="pb-0"]
-VendItem_xpath=//*[@class="dx-scrollview-content"]/div[1]/div
-AddOffice_xpath=//*[@class="link_txt mt-10"]
-AddOfSub_xpath=//*[@class="d-flex justify-content-end"]/dx-button
-AddOfCan_xpath=//*[@class="d-flex justify-content-end"]/dx-button[2]
-AddOfClose_xpath=//*[@aria-label="close"]
-AddOfBac_xpath=//app-carrieraccount/div/div[2]/div/form/div[2]/dx-button[@aria-label="Back"]/div
-AddAc_xpath=//*[@id="txtaccount"]/div/div[1]/input
-AddName_xpath=//*[@id="txtname"]/div/div[1]/input
-AddNote_xpath=//*[@id="txtnote"]/div/div[1]/textarea
-AddValidTo_xpath=//*[@id="txtvalidTo"]/div/div/div[1]/input
-OfficeCode_xpath=//*[@id="autocompleteoffice"]/div/div/div[1]/input
 
 
 ------------------Vendor-Integrator-Master------------------------------
@@ -488,10 +307,17 @@ APGApSubmit_id=btnAirportGroupSubmitBtnNew
 APGPSubmit_id=btnAirportGroupSubmit
 APGpShwInAct_id=txtAirportGroupCheckbox
 ApGpBack_id=btnAirportGroupBackBtn
-
+APGCreate_xpath=//*[@routerlink="airportgroup"]	
+APGRemoveAp_xpath=//*[@class="dx-tag-remove-button"]
+ApGLApSelect_xpath=//td[@aria-label="Select row"]/div
+APGAListVal_xpath=//*[@class="dx-tag-content"]/span
+APGExp_xpath=//*[@class="dx-datagrid-group-closed"]
 
 
 ------------------Vendor-------------------
+MainVendor_xpath=//*[@id="aside"]/div/ul/li[3]/button/span
+vendor_xpath=//*[@id="single-spa-application:mnx-ui-userrole"]/app-root/div/app-main-layout/div/app-sidebar/aside/div[2]/div/nav/ul/li/dx-button[1]/div
+VenAddContactSUb_xpath=//*[@class="row popup-btn-wrapper"]//dx-button[@id="btnVendorSubmit"]
 LeftDiv_id=aside
 Company_id=txtVendorsCompanyName
 SearchAddFil_id=btnVendorsSearchVendors1
@@ -530,6 +356,9 @@ VTSTFShwInActive_id=chkbxVendorTypeSubTypeShowDelete
 VTSTAppFilter_id=btnVendorTypeSubTypeApplyFilter
 VTSTClearFilter_id=btnVendorTypeClearFilter
 VTSTFCancel_id=btnVendorTypeSubTypeCancel
+VendTST_xpath=//*[@aria-label="Vendor Type & Sub-Type"]
+VendTSTExpand_xpath=//*[@aria-label="Expand"]
+VendTSTColla_xpath=//*[@aria-label="Collapse"]
 
 -----------Vendor-Address------------
 VAddCreate_id=btnAddressCreateAddress
@@ -551,6 +380,7 @@ VAddFZipCode_id=txtAddressesPostalCode
 VAddFShwInActive_id=chkbxAddressesDelete
 VAddApplyFil_id=btnAddressApplyFilter
 VAddFCancel_id=btnAddressLabelCancel
+VendAddress_xpath=//*[@aria-label="Address"]
 
 
 
@@ -561,6 +391,8 @@ TranOTP_id=dx-col-87
 DestOTP_id=dx-col-88
 VendOTP_id=dx-col-89
 LstRev_id=dx-col-90
+VendPerf_xpath=//*[@aria-label="Vendor Performance"]
+VPerfSearch_xpath=//*[@placeholder="Search"]//input
 
 ------VendorDocument------
 VendDocBrowse_id=fileDropRef
@@ -570,6 +402,7 @@ VDocBack_id=btnDocsCancel
 VDocSubmit_id=btnDocsSubmit
 VDocShwInActv_id=chkbxDocumentsShowDeleted
 VDocValidTo_id=dteDocumentValidTo
+VendDocument_xpath=//*[@aria-label="Document"]
 
 
 
@@ -587,6 +420,8 @@ VSATSubmit_id=btnServiceAreaSubmit
 VSATShwInActive_id=chkbxServiceAreasShowInActive
 VSATValidTo_id=dteServiceAreaValidTo
 VSATApIDText_id=txtServiceAreaAreaKey
+VendSAreaType_xpath=//*[@aria-label="Service Area Type"]
+VSATAPIDItem_xpath=//div[@class="action_btn dx-template-wrapper"]
 
 --------Vendor-VehicleType--------------
 VVTCreate_id=btnVehicleTypeCreate
@@ -602,6 +437,7 @@ VVTClearF_id=btnVehicleTypeClearFilter
 VVTSerArea_id=drpVehicleTypeGuid
 VVTVehType_id=drpVehicleTypeTypeGUID
 VVTSowDel_id=chkbxVehicleTypeShowDelete
+VendVehicleType_xpath=//*[@aria-label="Vehicle Type"]
 
 
 ------Vendor-VendorPerformance--------
@@ -616,6 +452,7 @@ VPerfLRDate_id=dteVendorPerformanceLastReviewDate
 VPerfYrList_id=drpVendorPerformanceYearList
 
 ------Vendor-TransportationServices-------
+VTraService_xpath=//*[@aria-label="Transportation Service"]
 VTSSubmit_id=btnTransportationServiceSubmit
 VTSSearch_id=txtTransportationServiceSearch
 VTSESave_id=btnTransportationEditSave
@@ -624,6 +461,7 @@ VTSShwDel_id=chkbxTransportationServiceShowDelete
 VTSValidTo_id=dteTransportationEditPopValidTo
 
 -----------Vendor-TransportServiceLevel--------
+VTSLevel_xpath=//*[@aria-label="Transportation Service Level"]
 VTSLevelSubmit_id=btnServiceLevelSubmit
 VTSLSearch_id=txtServiceLevelSearch
 VTSLESave_id=btnServiceLevelEditSave
@@ -632,6 +470,7 @@ VTSLEValidTo_id=dteServiceLevelEditPopValidTo
 VTSLShwInAct_id=chkbxServiceLevelShowDelete
 
 -----------Vendor-FacilityAttributes----------
+VFacAttributes_xpath=//*[@aria-label="Facility Attributes"]
 VFASubmit_id=btnFacilityAttrSubmit
 VFASearch_id=txtFacilityAttrSearch
 VFAESave_id=btnFacilityAttrEditSave
@@ -640,6 +479,7 @@ VFAShwDeleted_id=chkbxFacilityAttributeShowDelete
 VFAEValidTo_id=dteFacilityAttributePopValidTo
 
 ---------Vendor-FacilityHandling---------
+VFHandling_xpath=//*[@aria-label="Facility Handling"]
 VFHanSubmit_id=btnFacilityHandlingSubmit
 VFHSearch_id=txtFacilityHandlingSearch
 VFHESave_id=btnFacilityhandlingSave
@@ -647,6 +487,7 @@ VFHECancel_id=btnFacilityHandlingCancel
 VFHEValidTo_id=dteFacilityhandlingPopValidTo
 
 ---------Vendor-FacilityMaintenance--------
+VFMaintenance_xpath=//*[@aria-label="Facility Maintenance"]
 VFMSubmit_id=btnFacilityMaintenanceSubmit
 VFMSearch_id=txtFacilityMaintenanceSearch
 VFMESave_id=btnFacilityMaintenanceEditSave
@@ -655,6 +496,7 @@ VFMEValidTo_id=dteFacilityMaintenanceEditPopValidTo
 VFMShwDeleted_id=chkbxFacilityMaintenanceShowDelete
 
 ----------Vendor-Alert-----------
+VAlert_xpath=//*[@aria-label="Alert"]
 VAlertSubmit_id=btnAlertSubmit
 VAlSearch_id=txtAlertSearch
 VAlFilter_id=btnAlertFilter
@@ -679,9 +521,9 @@ VCompShwInAct_id=chkbxComplianceShowDeleted
 VCompValidTo_id=dteComplianceTypeValidTo
 VCompESave_id=btnComplianceTypeEditRecord
 VCompCancel_id=btnComlianceCancel
-
-
-
+VCompliance_xpath=//*[@aria-label="Compliance"]
+VCompDelete_xpath=//*[@src="/assets/img/delete.png"]
+VCompValidTo_xpath=//*[@class="dx-popup-content"]//input[@id="dteComplianceTypeValidTo"]
 
 
 
@@ -702,6 +544,8 @@ CourFTSA_id=chkbxcouriersTsaCert
 CourFDX_id=chkbxcouriersIsFdxTsa
 CourFShwInAct_id=chkbxcouriersShowInactive
 VCor_id=txtcourierId
+CourSName_xpath=//input[@id="txtcouriersName"]
+
 
 --------Vendor-Courier--OperationHours----------
 CourOpHCreate_id=Createbtn
@@ -737,7 +581,8 @@ CNSubmit_id=btncourierCreateNotes
 CNShwInact_id=showInactiveInput
 
 -----Vendor-Courier-Driver------
-
+CourDriv_xpath=//*[@aria-label="Driver"]
+CDSearch_xpath=//input[@id="txtcourierdriverKeyup"]
 
 
 
@@ -763,7 +608,8 @@ CarrEAddline_id=txtAddrLine1
 CarrSubmit_id=btncarriermastersubmit
 CarrBack_id=btncarriermasterback
 CarrShwInACtive_id=txtCarriersSearch
-
+CarrVendDrop_xpath=//*[@formcontrolname="vendorGUID"]
+CarrBack_xpath=//*[@aria-label=" Back"]
 
 
 
@@ -787,6 +633,11 @@ ACCrtOffCancl_id=btncarriercreateaccountcancel
 ACCrtOffSubmit_id=btncarriercreateaccountsubmit
 ACSubmit_id=btncarrieraccountsubmit
 ACShwDeleted_id=extCarrierAccountsAccount
+Acc_xpath=//*[@aria-label="Accounts"]
+AddNote_xpath=//*[@id="txtnote"]/div/div[1]/textarea
+AddOffice_xpath=//*[@class="link_txt mt-10"]
+AddOfClose_xpath=//*[@aria-label="close"]
+OfficeCode_xpath=//*[@id="autocompleteoffice"]/div/div/div[1]/input
 
 -----------Vendor-Carrier-Notes------------
 Notes_id=btnsubnavl1
@@ -796,6 +647,9 @@ NoteSubmit_id=btnnotesubmit
 NoteCancel_id=btnnotecancel
 NoteSearch_id=txtSearch
 NoteShwInActive_id=txtCarrierNotesBargo
+Notes_xpath=//*[@aria-label="Notes"]
+NotCreat_xpath=//*[@aria-label="Create"]
+NoCrePuHeading_xpath=//*[@class="dx-item-content dx-toolbar-item-content"]/div
 
 -----------Vendor-Carrier-Notices------------
 NoticesCreate_id=btnnoticecreate
@@ -804,6 +658,9 @@ NoticeSubmit_id=btnnoticesubmit
 NoticeCancel_id=btnnoticecancel
 NoticeSearch_id=txtCarrierNoticeSearch
 NoticeShwInActive_id=txtCarrierNoticesBargo
+Notices_xpath=//*[@aria-label="Notices"]
+NotiApID_xpath=//*[@formcontrolname="airportId"]/div/div/div[1]/input
+NotiNotes_xpath=//*[@formcontrolname="notes"]/div/div[1]/textarea
 
 ------------Vendor-Carrier-Location--------
 LocCreate_id=btnlocationcreate
@@ -824,6 +681,9 @@ LocHour_id=txtHours
 LocSubmit_id=submitbtn
 LocSearch_id=txtSearch
 LocShwInActive_id=txtCarrierLocationsBargo
+Location_xpath=//*[@aria-label="Location"]
+LocApID_xpath=//*[@formcontrolname="airportId"]/div/div/div[1]/input
+LocValidTo_xpath=//*[@formcontrolname="validTo"]/div/div/div[1]/input
 
 -----------
 
@@ -969,7 +829,6 @@ GCCFAirport_id=txtCityAirportName
 GCCAppFil_id=btnCityApplyFilter
 GCCClearFil_id=btnCityClearFilter
 GCCFCancel_id=btnCityCancel
-
 
 
 
