Changes in Rate module and Properties file for Create Order 5th Jan 2022

--- a/src/main/resources/samyak_PropertiesData/ObjectStorage.properties
+++ b/src/main/resources/samyak_PropertiesData/ObjectStorage.properties
@@ -117,7 +117,7 @@ ShwInac_xpath=//*[@formcontrolname="showInactive"]
 Company_xpath=//*[@formcontrolname="companyId"]//input[@role="combobox"]
 
 -------------Vendor->Courier----------------------
-VCorDiv_xpath=//*[@id="single-spa-application:mnx-ui-userrole"]/app-root/div/app-main-layout/div/app-sidebar/aside/div[2]/div/nav/ul
+VCorDiv_xpath=//nav[@class="sidenav"]//li
 VCor_xpath=//*[@aria-label="Courier"]/div/span
 VCorName_xpath=//*[@formcontrolname="name"]/div/div[1]/input
 VCorAgeCode_xpath=//input[@id="txtcouriersAgentCode"]
@@ -379,6 +379,7 @@ VAddFCity_id=txtAddressesCity
 VAddFZipCode_id=txtAddressesPostalCode
 VAddFShwInActive_id=chkbxAddressesDelete
 VAddApplyFil_id=btnAddressApplyFilter
+VAddClearFil_id=btnAddressClearFilter
 VAddFCancel_id=btnAddressLabelCancel
 VendAddress_xpath=//*[@aria-label="Address"]
 
@@ -984,7 +985,7 @@ RCTCurrency_id=drpCostTemplateCurrency
 RCTTax_id=numCostTemplateTax
 RCTStatus_id=drpCostTemplateStatusNew
 RCTSubmit_id=btnCostTemplateSubmit
-RCTCancel_id=id="btnCostTemplateCancel"
+RCTCancel_id=btnCostTemplateCancel
 Copy_xpath=//*[@src="/assets/img/icon_action_Copy.svg"]
 CostTempCopyOk_id=btnCostTemplateDanger
 CostTempCopySkip_id=btnCostTemplateSkip
@@ -997,6 +998,8 @@ RCostTCalPer_id=numcosttypepercentage
 RCostTSubmit_id=btncosttypesubmit
 RCostTCancel_id=btncosttypecancle
 RCTNav_xpath=//*[@class="breadcrumb mb-17"]//li[2]
+RCTClear_xpath=//*[@aria-label="Clear"]
+
 
 -----------Rate--ServiceRealRate--------
  Service Real Rate
@@ -1041,6 +1044,93 @@ CRCostTemple_id=drpcarrierratetransportlevel
 CRValidTo_id=dtecarrierratevalidto
 CRSubmit_id=btncarrierratesubmit
 CRCancel_id=btncarierratecancel
+
+
+-------CreateOrder-Caller--------
+COCallerName_id=drpCallername
+COPhoneNo_id=txtPhone
+COAccount_id=txtAccount
+COAcSearch_id=btnSearchAccount
+COAcName_id=txtAccountName
+COReference_id=txtReference
+COQuickQuote_id=btnQuickquote
+COPUDist_id=txtPickupDistance
+COPUDisUOM_id=drpPickupDistanceUOM
+COPUClear_id=btnPickupClear
+COPUCountry_id=drpnPickupCountry
+COPUZipCode_id=txtPickupZipCode
+COPUZipCSearch_id=btnPickupZipCodeSearch
+COPUAirport_id=txtPickupAirportId
+COPUAPSearch_id=btnPickupShowAirport
+COPUPickupNo_id=txtPickupPickupNo
+COPUPNSearch_id=btnPickupShowPopupPickupNoSearch
+COPUPickupSearch_id=btnPickupSearch
+COPUSuggestions_id=btnPickSuggestionshow
+COPUCompany_id=txtPickupCompany
+COPUQCode_id=txtPickupcode
+COPUAddLine1_id=txtPickupAddress1
+COPUAddLine2_id=txtPickupAddressLine2
+COPUCity_id=drpPickupCityName
+COPUStateProv_id=txtPickupStateAbbr
+COPUPickRes_id=chkbxPickupresidence
+COPULiftGate_id=chkbxPickupLiftGate
+COPUPickandHold_id=chkbxPickuppickupandHold
+COPUDrop_id=chkbxPickupdrop
+COPUPrimContact_id=txtPickupPrimaryContact
+COPUPrimPhnNo_id=numPickupPrimaryphone
+COPUPrimPNExt_id=numPickupPrimaryPhoneExt
+COPUEmail_id=txtPickupEmail
+COPUAltContact_id=numPickupAlternateContact
+COPUAltPhonNo_id=numPickupAlternatePhone
+COPUAltPNExt_id=numPickupAlternatePhoneExt
+COPUReadyFPUDt_id=dtePickupReadyDate
+COPUReadyFPUTime_id=dtePickupReadyTime
+COPUQPTDate_id=dtePickupQPTDate
+COPUQPTTime_id=dtePickupQPTTime
+COPUAgent_id=txtPickupAgent
+COPUAgentSearch_id=btnPickupAgentPopupSearch
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
