--- a/src/main/resources/samyak_PropertiesData/ObjectStorage.properties
+++ b/src/main/resources/samyak_PropertiesData/ObjectStorage.properties
@@ -1054,6 +1054,8 @@ COAcSearch_id=btnSearchAccount
 COAcName_id=txtAccountName
 COReference_id=txtReference
 COQuickQuote_id=btnQuickquote
+
+----CreateOrder--Pickup-------
 COPUDist_id=txtPickupDistance
 COPUDisUOM_id=drpPickupDistanceUOM
 COPUClear_id=btnPickupClear
@@ -1089,6 +1091,10 @@ COPUQPTDate_id=dtePickupQPTDate
 COPUQPTTime_id=dtePickupQPTTime
 COPUAgent_id=txtPickupAgent
 COPUAgentSearch_id=btnPickupAgentPopupSearch
+
+-------CreateOrder-Delivery-------
+CODDistUMO_id=distanceUOM
+CODClear_id=delclear
 
 
 
